added engines into root script

--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
         "paid:render-pre-start": "npm run build:all",
         "paid:render-start": "npm run start:all",
         "free:render-build": "npm run install:all && npm run build:all",
-        "free:render-start": "npm run start:all"
+        "free:render-start": "npm run start:all",
         "start": "node server/dist/server.js",
         "postinstall": "npm run install:all && npm run build:all"
+    },
+    "engines": {
+        "node": ">=18.0.0",
+        "npm": ">=9.0.0"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.6",
